[workspace]
members  = ["grill", "grill-core", "grill-macros", "grill-json-schema", "tests"]
resolver = "2"

[workspace.dependencies]
grill             = { version = "0.1.0" }
grill-core        = { version = "0.1.0" }
grill-json-schema = { workspace = "0.1.0" }
grill-macros      = { version = "0.1.0" }

anyhow           = { version = "1.0.75" }
async-trait      = { version = "0.1" }
bitflags         = { version = "2.4.1" }
dyn-clone        = { version = "1.0.11" }
either           = { version = "1.8.1" }
erased-serde     = { version = "0.3.25" }
inherent         = { version = "1.0.10" }
jsonptr          = { version = "0.4.4" }
mockall          = { version = "0.11.4" }
num              = { version = "0.4", features = ["serde"] }
num-rational     = { version = "0.4.1" }
once_cell        = { version = "1.10" }
paste            = { version = "1.0.14" }
percent-encoding = { version = "2.3" }
regex            = { version = "1.5.4" }
reqwest          = { version = "0.11" }
serde            = { version = "1.0.163", features = ["derive", "rc"] }
serde_json       = { version = "1.0.107", features = ["arbitrary_precision"] }
serde_yaml       = { version = "0.9.21" }
similar          = { version = "2.2.1" }
slotmap          = { version = "1.0.6" }
strum            = { version = "0.24", features = ["derive"] }
strum_macros     = { version = "0.24" }
thiserror        = { version = "1.0.25" }
toml             = { version = "0.8.2" }
url              = { version = "2.2.2" }
urn              = { version = "0.7.0" }

[patch.crates-io]
grill             = { path = "grill" }
grill-core        = { path = "grill-core" }
grill-json-schema = { path = "grill-json-schema" }
grill-macros      = { path = "grill-macros" }
