[package]
authors     = ["chance dinkins"]
description = "core logic and types for grill"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "grill-core"
repository  = "https://github.com/chanced/grill"
version     = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
grill-uri = { workspace = true, features = ["serde"] }

async-trait      = { workspace = true }
bitflags         = { workspace = true }
dyn-clone        = { workspace = true }
either           = { workspace = true }
erased-serde     = { workspace = true }
inherent         = { workspace = true }
jsonptr          = { workspace = true }
num              = { workspace = true }
num-rational     = { workspace = true }
once_cell        = { workspace = true }
paste            = { workspace = true }
percent-encoding = { workspace = true }
pin-project      = { workspace = true }
regex            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true, features = ["arbitrary_precision"] }
serde_yaml       = { workspace = true, optional = true }
slotmap          = { workspace = true }
snafu            = { workspace = true }
strum            = { workspace = true }
toml             = { workspace = true, optional = true }
tracing          = { workspace = true }

[dev-dependencies]
# grill              = { workspace = true }
mockall            = { workspace = true }
similar            = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }

[features]
default = ["toml"]
toml    = ["dep:toml"]
yaml    = ["dep:serde_yaml"]
