[package]
name = "grill-json-pointer"
version = "0.0.0"
edition = "2021"
description = "wip"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chanced/grill"
authors = ["chance dinkins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
