[package]
edition = "2021"
name    = "grill-json-schema"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grill-core        = { workspace = true }
grill-uri         = { workspace = true }
indexmap          = { workspace = true }
jsonptr           = { workspace = true }
once_cell         = { workspace = true }
paste             = { workspace = true }
polonius-the-crab = { workspace = true }
regex             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
slotmap           = { workspace = true }
strum             = { workspace = true }
trait-variant     = { workspace = true }

[dev-dependencies]
grill   = { workspace = true }
mockall = { workspace = true }
similar = { workspace = true }
tokio   = { version = "1.28", features = ["full"] }
