[package]
edition = "2021"
name    = "grill-test-builder"
version = "0.1.0"

[dependencies]
anyhow       = { workspace = true }
glob         = { version = "0.3.1" }
grill        = { workspace = true }
heck         = { version = "0.5.0-rc.1" }
path-slash   = { version = "0.x" }
prettyplease = { version = "0.2" }
proc-macro2  = { version = "1.0" }
quote        = { version = "1.0" }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
syn          = { version = "2.0.38" }
toml         = { workspace = true }
