[package]
edition = "2021"
name    = "grill-test-builder"
version = "0.1.0"

[dependencies]
camino       = { version = "1.1.6", features = ["serde1"] }
glob         = { version = "0.3.1" }
grill        = { workspace = true }
heck         = { version = "0.5.0-rc.1" }
once_cell    = { workspace = true }
path-slash   = { version = "0.x" }
prettyplease = { version = "0.2" }
proc-macro2  = { version = "1.0" }
quote        = { version = "1.0" }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true, features = ["raw_value"] }
snafu        = { workspace = true }
syn          = { version = "2" }
toml         = { workspace = true }
