[package]
authors     = ["chance dinkins"]
description = "wip"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "grill"
repository  = "https://github.com/chanced/grill"
version     = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
grill-core        = { version = "0.1.0" }
grill-json-schema = { version = "0.1.0" }
grill-macros      = { version = "0.1.0" }

[dev-dependencies]
mockall = { workspace = true }
similar = { workspace = true }
tokio   = { version = "1.28", features = ["full"] }

[features]
default = ["http", "toml", "yaml"]
http    = ["grill-core/http"]
toml    = ["grill-core/toml"]
yaml    = ["grill-core/yaml"]

[[bench]]
harness = false
name    = "benchmark"

[replace]
"serde_json:1.0.107" = { git = "https://github.com/serde-rs/json" }
