[package]
authors     = ["chance dinkins"]
description = "wip"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "grill"
repository  = "https://github.com/chanced/grill"
version     = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
grill-core        = { workspace = true }
grill-json-schema = { workspace = true }
grill-macros      = { workspace = true }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }

[features]
default = ["http", "toml", "yaml"]
http    = ["grill-core/http"]
toml    = ["grill-core/toml"]
yaml    = ["grill-core/yaml"]

[[bench]]
harness = false
name    = "benchmark"
