[package]
edition = "2021"
name    = "tests"
version = "0.1.0"

[dependencies]
grill              = { workspace = true }
heck               = { version = "0.5.0-rc.1" }
prettyplease       = { version = "0.2" }
serde              = { workspace = true }
serde_json         = { workspace = true, features = ["arbitrary_precision"] }
syn                = { version = "2", features = ["full", "parsing"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
