[package]
edition = "2021"
name    = "tests"
version = "0.1.0"

[dependencies]
grill      = { workspace = true }
once_cell  = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }

[build-dependencies]

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }

[[test]]
edition = "2021"
name    = "test-suite"
path    = "suite/mod.rs"
