[package]
edition = "2021"
name    = "tests"
version = "0.1.0"

[dependencies]
grill      = { workspace = true }
once_cell  = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }

[dev-dependencies]
futures = { version = "0.3.29" }

[[test]]
edition = "2021"
name    = "test-suite"
path    = "suite/mod.rs"
